--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello There, I'm Yash Patel
+    Hello There, I'm Yash Patel 
+    Email-yashpatel4045@gmail.com
 </body>
 </html>
