--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </ul>
                 <span class="nav-item social-icons">
                     <span class="fa-stack">
-                        <a href="https://github.com/HorizonShiv">
+                        <a href="https://github.com/CosmosAkaYash">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fab fa-github fa-stack-1x"></i>
                         </a>
