--- a/index.html
+++ b/index.html
@@ -248,18 +248,19 @@
 
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="https://github.com/HorizonShiv/CampusConnect">
-                                <img class="img-fluid" src="images/CityRoute.png" alt="alternative">
+                            <a href="https://github.com/CosmosAkaYash/CityRoute">
+                                <img class="img-fluid" src="images/City_Route.jpeg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> City Route, <strong>Project:</strong> City Route, This website is designed to make  it easy for users to navigate the public transportation sytem. In which user can find the nearest BRTS station from their current location and show routes to reach their destination.</p>
+                        <p><strong>For:</strong> City Route, <strong>Project:</strong>City Route is a centralized portal in which users can find the route of public transport as well as live tracking from pick-up point to drop point so that users get an idea of where they are. All the necessary information about any Bus route is given on the site so that user can easily understand the map of city Buses. In the portal users will  notify the nearest bus station  of their location and the nearest  Bus station where they want to go,it was all done through Google Map APIS. </p>
+                        <!-- City Route, This website is designed to make  it easy for users to navigate the public transportation sytem. In which user can find the nearest BRTS station from their current location and show routes to reach their destination. -->
                     </div> <!-- end of text-container -->
 
                    
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="https://github.com/HorizonShiv/BusinessSite">
-                                <img class="img-fluid" src="images/CityRoute_Aboutus.png" alt="alternative">
+                            <a href="https://github.com/CosmosAkaYash/CityRoute">
+                                <img class="img-fluid" src="images/CityRoute_Home.jpeg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
                     </div> <!-- end of text-container -->
